--- a/thanhvien.html
+++ b/thanhvien.html
@@ -85,8 +85,8 @@
                         <h1>Hoàng Thị Ái Duyên</h1>
                         <div class="intro_content">
                             <p><span>Ngành học</span> <br>Quản lý công nghiệp </p>
-                            <p><span>Phân công công việc</span><br>dsfdsafasd fdsafasd fdsa fad</p>
-                            <p><span>Tỉ lệ đóng góp</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Công việc thực hiện</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                     <div class="intro">
                         <h1>Nguyễn Thanh Phụng</h1>
                         <div class="intro_content">
-                            <p><span>Nghành học</span> <br>Quản lý công nghiệp </p>
+                            <p><span>Ngành học</span> <br>Quản lý công nghiệp </p>
                             <p><span>Phân công công việc</span><br>dsfdsafasd fdsafasd fdsa fad</p>
-                            <p><span>Tỉ lệ đóng góp</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         <div class="intro_content">
                             <p><span>Ngành học</span> <br>Quản lý công nghiệp</p>
                             <p><span>Phân công công việc</span><br>dsfdsafasd fdsafasd fdsa fad</p>
-                            <p><span>Tỉ lệ đóng góp</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
                 </div>
