--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                       </div>
                       <p><span>Trang chủ</span>: Giới thiệu tổng quát về nội dung và mục tiêu đề tài</p>
                       <p><span>Trang thành viên</span>: Giới thiệu về các thành viên, nội dung công việc phụ trách, tỉ lệ đóng góp</p>
-                      <p><span>Trang ý tưởng</span>: mô tả cụ thể ý tưởng thực hiện đề tài</p>
-                      <p><span>Tranh nhập xuất hàng</span>: giải quyết vấn đề, thao tác thông báo khi nhập xuất dữ liệu, báo lỗi nếu nhập sai</p>
-                      <p><span>Trang thống kê</span>: thể hiện kết quả thống kê lịch sử dữ liệu đã nhập vào và xuất ra
+                      <p><span>Trang ý tưởng</span>: Mô tả cụ thể ý tưởng thực hiện đề tài</p>
+                      <p><span> nhập xuất hàng</span>: Giải quyết vấn đề, thao tác thông báo khi nhập xuất dữ liệu, báo lỗi nếu nhập sai</p>
+                      <p><span>Trang thống kê</span>: Thể hiện kết quả thống kê lịch sử dữ liệu đã nhập vào và xuất ra
                       <p><span>Trang liên hệ</span>: thông tin liên hệ với nhóm</p>
                       <div class="bottom">
                         <a href=""></a>
