--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	 <div class="container-fluid">
         <div class="row header">
             <div class="logo"> 
-                    <a href="https://www.ctu.edu.vn/"><img src="https://phungb1905815ctu.github.io/website/Logo CTU.png" align="left" width="80" height="80"></a>
+                    <a href="https://www.ctu.edu.vn/"><img src="https://phungb1905815ctu.github.io/IOT_Nhom9/Logo CTU.png" align="left" width="80" height="80"></a>
             </div>
             <div class="btn-group" role="group" aria-label="Basic example">
                 <button id="home" type="button" class="btn pageTrangchu">
