--- a/thanhvien.html
+++ b/thanhvien.html
@@ -85,7 +85,7 @@
                         <h1>Hoàng Thị Ái Duyên</h1>
                         <div class="intro_content">
                             <p><span>Ngành học</span> <br>Quản lý công nghiệp </p>
-                            <p><span>Công việc thực hiện</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Công việc thực hiện</span><br>Phân công công việc và góp ý, Thiết kế trang chủ</p>
                             <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
                         <h1>Nguyễn Thanh Phụng</h1>
                         <div class="intro_content">
                             <p><span>Ngành học</span> <br>Quản lý công nghiệp </p>
-                            <p><span>Phân công công việc</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Phân công công việc</span><br>Thiết kế trang nhập xuất hàng, trang liên hệ</p>
                             <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <h1>Nguyễn Khánh Duy</h1>
                         <div class="intro_content">
                             <p><span>Ngành học</span> <br>Quản lý công nghiệp</p>
-                            <p><span>Phân công công việc</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Phân công công việc</span><br>Thiết kế trang thành viên, góp ý trang liên hệ</p>
                             <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
@@ -130,7 +130,7 @@
                         <h1>Thạch Lồng SaRịt</h1>
                         <div class="intro_content">
                             <p><span>Nghành học</span> <br>Kỹ thuật điều khiển và tự động hóa </p>
-                            <p><span>Phân công công việc</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Phân công công việc</span><br>Thiết kế trang thống kê, góp ý trang nhập xuất hàng</p>
                             <p><span>Tỉ lệ đóng góp</span><br>dsfdsafasd fdsafasd fdsa fad</p>
                         </div>
                     </div>
