--- a/thanhvien.html
+++ b/thanhvien.html
@@ -129,7 +129,7 @@
                     <div class="intro">
                         <h1>Thạch Lồng SaRịt</h1>
                         <div class="intro_content">
-                            <p><span>Nghành học</span> <br>Kỹ thuật điều khiển và tự động hóa </p>
+                            <p><span>Ngành học</span> <br>Kỹ thuật điều khiển và tự động hóa </p>
                             <p><span>Phân công công việc</span><br>Thiết kế trang thống kê, góp ý trang nhập xuất hàng</p>
                             <p><span>Tỉ lệ đóng góp</span><br>dsfdsafasd fdsafasd fdsa fad</p>
                         </div>
