--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                       <p><span>Trang liên hệ</span>: thông tin liên hệ với nhóm</p>
                       <div class="bottom">
                         <a href=""></a>
-                        <i>- Đại học Cần Thơ</i>
+                        <i>Nhóm 9</i>
                       </div>
                   </section>
               </div>
@@ -103,7 +103,7 @@
                   <p>Qua dữ liệu nhập xuất có thể dự báo và nhập hàng vào kho</p>
                   <div class="bottom">
                     <a href=""></a>
-                    <i>- Đại học Cần Thơ</i>
+                    <i>Nhóm 9</i>
                   </div>
               </section>
           </div> 
