--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 
         </div>
       </div>
+		 
+	<video autoplay muted loop id="video">
+            <source src="https://phungb1905815ctu.github.io/website/videochung.mp4" type="video/mp4">
+        </video>
 </div>
     <div class="center">
       <div class="outer"></div>
