--- a/thanhvien.html
+++ b/thanhvien.html
@@ -131,7 +131,7 @@
                         <div class="intro_content">
                             <p><span>Ngành học</span> <br>Kỹ thuật điều khiển và tự động hóa </p>
                             <p><span>Phân công công việc</span><br>Thiết kế trang thống kê, góp ý trang nhập xuất hàng</p>
-                            <p><span>Tỉ lệ đóng góp</span><br>dsfdsafasd fdsafasd fdsa fad</p>
+                            <p><span>Tỉ lệ đóng góp</span><br>100%</p>
                         </div>
                     </div>
                 </div>
