--- a/nhapxuathang.html
+++ b/nhapxuathang.html
@@ -75,7 +75,7 @@
             <div class="col-12 main__menu">
                 <div class="btn-group" role="group" aria-label="Basic example">
                     <p style="color: red; font-size: 24px; border-bottom: 1px solid black">
-                       <b> Đồng hồ Manjaz </b> 
+                       <b> Đồng hồ Charme </b> 
                     </p>
                 </div>
             </div>
