--- a/thongke.html
+++ b/thongke.html
@@ -77,7 +77,7 @@
             <div class="col-12 main__menu">
                 <div class="btn-group" role="group" aria-label="Basic example">
                     <p style="color: red; font-size: 32px; border-bottom: 1px solid black">
-                       <b> Đồng hồ manjaz </b>
+                       <b> Đồng hồ Charme </b> 
                     </p>
                 </div>
             </div>
