--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                       <span>12 Dec 2022</span>
                   </div>
                   <p>Sử dụng HTML, CSS, Javascript viết một trang web</p>
-                  <p>Ứng dụng IoTs vào giải quyết vấn đề quản lý số lượng nhập vào và bán ra của sản phẩm đồng hồ Manjaz</p>
+                  <p>Ứng dụng IoTs vào giải quyết vấn đề quản lý số lượng nhập vào và bán ra của sản phẩm đồng hồ Charme </p>
                   <p>Qua dữ liệu nhập xuất có thể dự báo và nhập hàng vào kho</p>
                   <div class="bottom">
                     <a href=""></a>
